--- a/simone_algorithms.ipynb
+++ b/simone_algorithms.ipynb
@@ -28,7 +28,8 @@
     "from tqdm import tqdm\n",
     "import utils.pre_processing as pre\n",
     "from datareader import Datareader\n",
-    "from evaluator import Evaluator"
+    "from evaluator import Evaluator\n",
+    "import implicit"
    ]
   },
   {
@@ -77,7 +78,7 @@
     "s = sim.tversky(pre.bm25_row(urm.T), pre.bm25_col(urm), k=1000, alpha=0.50, beta=0.40, verbose=verbose)\n",
     "s.data=np.power(s.data, 0.85)\n",
     "r_cop = sim.dot_product(urm, s, target_rows=t_ids, k=500, verbose=verbose)\n",
-    "score = ev.evaluation(r_cop,urm,dr,save=True, name='lisbon')\n",
+    "score = ev.evaluation(r_cop,urm,dr,save=False, name='lisbon')\n",
     "print('LISBON MAP@10 --> %.5f'%(score))"
    ]
   },
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +224,7 @@
    ],
    "source": [
     "icm = dr.get_icm(alid=True, arid=False)\n",
-    "s = sim.dot_product(pre.bm25_col(icm), bm25_col(icm.T), k=15, verbose=verbose, format_output='csr')\n",
+    "s = sim.dot_product(pre.bm25_col(icm), pre.bm25_col(icm.T), k=15, verbose=verbose, format_output='csr')\n",
     "s.data=np.power(s.data, 0.8)\n",
     "r_cb_al = sim.dot_product(urm, s.T, target_rows=t_ids, k=500, verbose=verbose)\n",
     "score = ev.evaluation(r_cb_al,urm,dr,save=False, name='best_cb.csv')\n",
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +255,7 @@
     "icm_al = dr.get_icm(alid=True, arid=False)\n",
     "icm_ar = dr.get_icm(alid=False, arid=True)\n",
     "icm = sps.hstack([icm_al*1, icm_ar*0.4])\n",
-    "s = sim.dot_product(pre.bm25_col(icm), bm25_col(icm.T), k=31, verbose=verbose, format_output='csr')\n",
+    "s = sim.dot_product(pre.bm25_col(icm), pre.bm25_col(icm.T), k=31, verbose=verbose, format_output='csr')\n",
     "s.data=np.power(s.data, 0.8)\n",
     "r_cb = sim.dot_product(urm, s.T, target_rows=t_ids, k=500, verbose=verbose)\n",
     "score = ev.evaluation(r_cb,urm,dr,save=False, name='best_cb.csv')\n",
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -306,9 +307,75 @@
     "r1=pre.norm_l1_row(r_cf.tocsr())\n",
     "r2=pre.norm_l1_row(r_cb.tocsr())\n",
     "r_tot = r1 + 0.04127*r2\n",
-    "score = ev.evaluation(r_tot,urm,dr,save=True, name='copenhagen')\n",
+    "score = ev.evaluation(r_tot,urm,dr,save=False, name='copenhagen')\n",
     "print('COPENHAGEN MAP@10 --> %.5f'%(score))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PRAGUE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "export OPENBLAS_NUM_THREADS=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3.0/3 [00:08<00:00,  2.87s/it]\n",
+      "100%|██████████| 10000/10000 [00:40<00:00, 245.05it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALS MAP@10 --> 0.06766\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ALS\n",
+    "model = implicit.als.AlternatingLeastSquares(factors=450, iterations=3, regularization=0.01)\n",
+    "model.fit(urm.T)\n",
+    "col, row, value = [], [], []\n",
+    "for u in tqdm(t_ids):\n",
+    "    rec = model.recommend(userid=u, user_items=urm, N=150)\n",
+    "    for r in rec:\n",
+    "        row.append(u), col.append(r[0]), value.append(r[1])\n",
+    "r_als = sps.csr_matrix((value,(row,col)), shape=urm.shape)\n",
+    "score = ev.evaluation(r_als,urm,dr,save=True, name='prague')\n",
+    "print('ALS MAP@10 --> %.5f'%(score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -319,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +394,8 @@
     "r1=pre.norm_max_row(r_cf.tocsr())\n",
     "r2=pre.norm_max_row(r_cb.tocsr())\n",
     "r3=pre.norm_max_row(r_cb_al.tocsr())\n",
-    "r4=pre.norm_max_row(r_cb_ar.tocsr())"
+    "r4=pre.norm_max_row(r_cb_ar.tocsr())\n",
+    "r5=pre.norm_max_row(r_als.tocsr())"
    ]
   },
   {
@@ -337,8 +405,8 @@
    "outputs": [],
    "source": [
     "# tune ensemble\n",
-    "for a in np.arange(0.04,0.05,0.001):\n",
-    "    r = r1+ a*r2\n",
+    "for a in np.arange(0.00,0.1,0.000001):\n",
+    "    r = r_tot+ a*r5\n",
     "    score = ev.evaluation(r,urm,dr,save=False, name='ensemble')\n",
     "    print('%.5f --> a: %.5f'%(score,a))"
    ]
